Fix issue where scroll bar would be cut off near the bottom of the window

--- a/app/app_components/NetworkView/NetworkView.css
+++ b/app/app_components/NetworkView/NetworkView.css
@@ -2,7 +2,7 @@
 .network .web-service-list {
   padding-right: 0;
   overflow-y: auto;
-  height: 100vh;
+  height: calc(100vh - 30px);
   border-right: 1px solid #ddd;
 }
 
